--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ obj/
 
 # Logs
 *.log
+*_log.txt
+build_debug.txt
 
-# Generated files
+# Certificate (ensure this is ignored!)
+*.pfx
 generate_cert.ps1
